# cmake-postgres

./: CMakeLists.txt  Makefile
src/: main.cpp
